fixed bootstrap scrollspy on navbar problem
added id="about" and id="contact" in their respective <div>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
         <!-- About Us-->
         <section class="projects-section bg-light" id="about">
-            <div class="container px-4 px-lg-5">
+            <div class="container px-4 px-lg-5" id="about">
                 <!-- Featured-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/img0.jpg" alt="..." /></div>
@@ -93,7 +93,7 @@
         </section>
         <!-- Contact-->
         <section class="signup-section" id="contact">
-            <div class="container px-4 px-lg-5">
+            <div class="container px-4 px-lg-5" id="contact">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         
