Updated about description

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">The global education system is in disarray. Millions of youngsters, particularly those from low-income families, are unable to attend school. Many more people go to school, but they are not taught fundamental reading and math abilities. Furthermore, foreign education financing is decreasing.</p>
+                                    <h4 class="text-white">Global Education Crisis</h4>
+                                    <p class="mb-0 text-white-50">The global education system is in disarray. Millions of youngsters, particularly those from low-income families, are unable to attend school. Many more people go to school, but they are not taught fundamental reading and math abilities.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -81,8 +81,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Do you know? Over 200 million children will still be out of school in 2030. Can you imagine that happening in the 21st century? </p>
+                                    <h4 class="text-white">Insufficient funds to provide Equality Education</h4>
+                                    <p class="mb-0 text-white-50">Do you know? Over 200 million children will still be out of school in 2030. Can you imagine that happening in the 21st century? Furthermore, foreign education financing is decreasing. </p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
