changed about us heading

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/img0.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
+                            <h4>Ledu</h4>
                             <p class="text-black-50 mb-0">Ledu is an initiative to promote equitable quality education with the contribution from the awareness of the public.</p>
                         </div>
                     </div>
