--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">Subang Jaya, Selangor, Malaysia</div>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="mailto:ngzhexuan2@gmail.com">ngzhexuan2@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -187,15 +187,14 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">+60 888 8888</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://monkonmars.github.io/Monk-on-Mars/"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://github.com/MonkOnMars"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
